mock api to get calendar access_token from TV
